crawler-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: synergychat-crawler
  labels: 
    app: synergychat-crawler
spec:
  replicas: 1
  selector:
    matchLabels:
      app: synergychat-crawler
  template:
    metadata:
      labels:
        app: synergychat-crawler
    spec: 
      containers: 
        - name: synergychat-crawler-1
          image: bootdotdev/synergychat-crawler:latest
          volumeMounts:
            - name: cache-volume
              mountPath: /cache
        - name: synergychat-crawler-2
          image: bootdotdev/synergychat-crawler:latest
          volumeMounts:
            - name: cache-volume
              mountPath: /cache
        - name: synergychat-crawler-3
          image: bootdotdev/synergychat-crawler:latest
          volumeMounts:
            - name: cache-volume
              mountPath: /cache
      volumes:
        - name: cache-volume
          emptyDir: {}
